Prueba pre version final, modificaciones varias, modularidad, estanca